<resources>
    <string name="app_name">Task Lock</string>
    <string name="title_activity_login_screen">Login_screen</string>
    <string name="prompt_email">Digite o seu Email</string>
    <string name="prompt_password">Digite a sua senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Seja bem vindo(a) ao nosso gerenciador de tarefas."</string>
    <string name="sub_welcome">"Vamos levar sua produtividade para o próximo nível!"</string>
    <string name="btn_enter">"Começar"</string>
    <string name="invalid_username">Usuário inválido</string>
    <string name="invalid_password">A senha precisa ter mais de 5 caracteres</string>
    <string name="login_failed">"Erro no login"</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="menu_home">Página principal</string>
    <string name="menu_usodeapps">Uso de apps</string>
    <string name="menu_appsbloqueado">Apps bloqueados</string>
    <string name="menu_adicionartarefa">Adicionar Tarefa</string>
    <string name="action_settings">Configurações</string>
    <string name="accessibility_service_description">Descrição do serviço de acessibilidade</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>

</resources>