<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icusuarios"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_usoapp"
            android:icon="@drawable/icgrafico"
            android:title="@string/menu_usodeapps" />

        <item
            android:id="@+id/nav_appsbloqueados"
            android:icon="@color/cardview_dark_background"
            android:title="@string/menu_appsbloqueado"
            />

        <item
            android:id="@+id/nav_adicionartarefa"
            android:icon="@drawable/icadicionartarefa"
            android:title="@string/menu_adcionartarefa" />
    </group>
</menu>