<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textviewSejaBemVind"
        android:layout_width="408dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="31dp"
        android:layout_weight="5"
        android:alpha="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r46izebeyewx"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/subSejaBemVind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/sub_welcome"
        android:textColor="#333232"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewSejaBemVind"
        app:layout_constraintVertical_bias="0.015" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_comecarPrincipal"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/btn_icon_start"
        android:fontFamily="@font/poppins_medium"
        android:lineSpacingExtra="8sp"

        android:text="@string/btn_enter"
        android:textColor="@color/white"
        android:textColorHighlight="#F2EAEA"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subSejaBemVind"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/r46izebeyewx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/orbitron"
        android:text="TaskLock"
        android:textColor="#FF820A"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <ImageView
        android:id="@+id/shadowicon"
        android:layout_width="293dp"
        android:layout_height="113dp"
        android:layout_marginTop="181dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_comecarPrincipal"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/shadowforicon" />

    <ImageView
        android:id="@+id/imagempersonaliza"
        android:layout_width="243dp"
        android:layout_height="262dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_comecarPrincipal"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/main_icon_tasklock" />

</androidx.constraintlayout.widget.ConstraintLayout>